src/k8s/apps/plausible/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plausible
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
