src/k8s/apps/plausible/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plausible
  ports:
    - name: http
      port: 8000
      targetPort: http
